--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 <table border="1" width="100%">
 
-   <tr><td colspan="2"></td><td colspan="3"></td><td colspan="2"></td></tr>
-   <tr><td rowspan="2"></td><td  colspan="4" rowspan="4" bgcolor="#FF6247"></td ><td colspan="2"></td></tr>
-   <tr><td colspan="2"></td></tr>
+   <tr><td colspan="2"></td><td colspan="3"></td><td colspan="2" bgcolor="#FFE659"></td></tr>
+   <tr><td rowspan="2"></td><td  colspan="4" rowspan="4" bgcolor="#FF6247"></td ><td colspan="2" bgcolor="#FFE659" bordercolor="bor" id="f1"></td></tr>
+   <tr><td colspan="2" bgcolor="#FFE659"></td></tr>
    <tr><td rowspan="3"></td><td></td><td></td></tr>
    <tr><td></td><td></td></tr>
-   <tr><td ></td><td></td><td  colspan="2"></td><td colspan="2"></td></tr>
-   <tr><td rowspan="3" bgcolor="#FFE659" ></td><td></td><td></td><td  colspan="2"></td><td colspan="2" rowspan="2"></td></tr>
-   <tr><td colspan="2" rowspan="2"></td><td colspan="2"></td></tr>
+   <tr><td bgcolor="#181818"></td><td bgcolor="#181818"></td><td  colspan="2"></td><td colspan="2"></td></tr>
+   <tr><td rowspan="3" bgcolor="#FFE659" ></td><td bgcolor="#181818"></td><td bgcolor="#181818"></td><td  colspan="2"></td><td colspan="2" rowspan="2" bgcolor="#023E7C"></td></tr>
+   <tr><td colspan="2" rowspan="2"></td><td colspan="2" bgcolor="#181818"></td></tr>
    <tr><td colspan="4"></td></tr>
 
   </table>
