--- a/index.html
+++ b/index.html
@@ -3,29 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lesson 3</title>
-	<link rel="stylesheet" type="text/css href="reset.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
-<table border="1" width="100%">
+<table>
 
-   <tr><td colspan="2"></td><td colspan="3"></td><td colspan="2" bgcolor="#FFE659"></td></tr>
-   <tr><td rowspan="2"></td><td  colspan="4" rowspan="4" bgcolor="#FF6247"></td ><td colspan="2" bgcolor="#FFE659" bordercolor="bor" id="f1"></td></tr>
-   <tr><td colspan="2" bgcolor="#FFE659"></td></tr>
+<tr><td colspan="2"></td><td colspan="3"></td><td colspan="2"  id="f8"></td></tr>
+   <tr><td rowspan="2"></td><td  colspan="4" rowspan="4"  id="f6"></td ><td colspan="2" id="f1"></td></tr>
+   <tr><td colspan="2"  id="f7"></td></tr>
    <tr><td rowspan="3"></td><td id="f3"></td><td id="f2"></td></tr>
    <tr><td></td><td></td></tr>
-   <tr><td bgcolor="#181818"></td><td bgcolor="#181818"></td><td  colspan="2"></td><td colspan="2"></td></tr>
-   <tr><td rowspan="3" bgcolor="#FFE659" ></td><td bgcolor="#181818"></td><td bgcolor="#181818"></td><td  colspan="2"></td><td colspan="2" rowspan="2" bgcolor="#023E7C"></td></tr>
-   <tr><td colspan="2" rowspan="2"></td><td colspan="2" bgcolor="#181818"></td></tr>
+   <tr><td id="f12"></td><td  id="f13"></td><td  colspan="2"></td><td colspan="2"></td></tr>
+   <tr><td rowspan="3" id="f9"></td><td id="f10"></td><td id="f11"></td><td  colspan="2"></td><td colspan="2" rowspan="2"  id="f14"></td></tr>
+   <tr><td colspan="2" rowspan="2"></td><td colspan="2"  id="f15"></td></tr>
    <tr><td colspan="4"></td></tr>
-<div id="f4"></div>
-<div id="f5"></div>
   </table>
-
- </body>
-</html>
-</table>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
 
